--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,6 +250,15 @@ textarea {
   grid-row-end: 24;
 }
 
+#project6 {
+  order: 6;
+  align-items: flex-start;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 17;
+  grid-row-end: 24;
+}
+
 img {
   border: 1px rgb(220, 220, 220) solid;
   margin: auto;
